--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,8 @@ clap = { version = "4.4", features = ["derive"] }
 sysinfo = "0.33.1"
 rand = "0.8"
 tokio = { version = "1.16", features = ["full"] }
+wgpu = "23.0"
+bytemuck = { version = "1.14", features = ["derive"] }
+pollster = "0.4.0"
+futures-intrusive = "0.5"
+futures = "0.3"
